rust/crates/ccusage/tests/snapshots/dsh_cli__dsh_cli_daily_table.snap
---
source: crates/ccusage/tests/dsh_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│    DeepSeek Harness Token Usage Report     │
│                                            │
╰────────────────────────────────────────────╯

┌────────────┬───────────────────┬───────────┬───────────┬───────────────┬─────────────┬───────────────┬─────────────┐
│ Date       │ Models            │     Input │    Output │  Cache Create │  Cache Read │  Total Tokens │  Cost (USD) │
├────────────┼───────────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ 2026-05-28 │ - deepseek-v4-pro │       100 │        20 │             5 │          40 │           165 │       $0.00 │
├────────────┼───────────────────┼───────────┼───────────┼───────────────┼─────────────┼───────────────┼─────────────┤
│ Total      │                   │       100 │        20 │             5 │          40 │           165 │       $0.00 │
└────────────┴───────────────────┴───────────┴───────────┴───────────────┴─────────────┴───────────────┴─────────────┘

stderr:
