rust/crates/ccusage/tests/snapshots/dsh_cli__dsh_cli_session_table.snap
---
source: crates/ccusage/tests/dsh_cli.rs
expression: "format!(\"stdout:\\n{stdout}\\nstderr:\\n{stderr}\")"
---
stdout:

╭────────────────────────────────────────────╮
│                                            │
│    DeepSeek Harness Token Usage Report     │
│                                            │
╰────────────────────────────────────────────╯

┌──────────┬───────────────┬───────────┬───────────┬─────────────┬────────────┬────────────┬────────────┬──────────────┐
│ Session  │ Models        │     Input │    Output │       Cache │ Cache Read │      Total │ Cost (USD) │ Last         │
│          │               │           │           │      Create │            │     Tokens │            │ Activity     │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ sess-dsh │ - deepseek-v… │       100 │        20 │           5 │         40 │        165 │      $0.00 │ 2026-05-28   │
├──────────┼───────────────┼───────────┼───────────┼─────────────┼────────────┼────────────┼────────────┼──────────────┤
│ Total    │               │       100 │        20 │           5 │         40 │        165 │      $0.00 │              │
└──────────┴───────────────┴───────────┴───────────┴─────────────┴────────────┴────────────┴────────────┴──────────────┘

stderr:
